# sustainability25W

./: .gitignore  README.md  USAGE.md  basemodel.py  captioning_model.py  config.py  diagrams.py  evaluation.py  find_vision_tower.py  inference.py  logger.py  main.py  metrics.py  model_utils.py  preprocess.py  pyproject.toml  quantize_vision_tower.py  requirements.txt  statistics.ipynb  test_basic.py
ass1/: .gitignore  ASSIGNMENT_SUMMARY.md  USAGE.md  config.py  dataset_loader.py  efficiency_metrics.py  evaluation_metrics.py  example_usage.py  inference.py  main.py  model_utils.py  preprocess.py  pyproject.toml  run_captioning.py  statistics.ipynb
ass1/docs/: bib.bib
ass2/: .gitignore  README.md  pyproject.toml
ass2/notebooks/: analyze.ipynb
ass2/scripts/: create_issues.sh  download_dataset.sh
ass2/src/analyze/: inspection.py  loader.py  plotting.py  preprocessing.py  quality.py
docs/: report.tex
