[project]
name = "sustainability25w"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.11.0",
    "pillow>=12.0.0",
    "qwen-vl-utils>=0.0.14",
    "requests>=2.32.5",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
]
