[project]
name = "sustainability25w"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "accelerate>=1.11.0",
    "bitsandbytes>=0.48.2",
    "click>=8.3.0",
    "colorlog>=6.10.1",
    "pillow>=12.0.0",
    "pycocoevalcap>=1.2",
    "qwen-vl-utils>=0.0.14",
    "requests>=2.32.5",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "transformers>=4.57.1",
]
